--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css?family=Philosopher" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link rel="icon" type="image/png" href="img/logo2.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
 </head>
 <body>
