--- a/news.html
+++ b/news.html
@@ -15,7 +15,7 @@
 
 </head>
 <body>
-    <div id="news" class="big-bg">
+    <div id="home" class="big-bg">
         <header class="page-header wrapper">
             <h1><a href="index.html"><img class="logo" src="img/logo3.png" alt="ドリーンズ_logo"</a></h1>
             <nav>
