--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <div class="home-content wrapper">
             <h2 class="page-title">We'll help your day</h2>
-            <p>依頼で依頼主様のお手伝いをいたします。</p>
+            <p>依頼主様のお手伝いをいたします。</p>
             <a class="button" href="menu.html">メニューを見る</a>
         </div>
     </div>
